asg/tests/fail/function/multiple_returns_input_ambiguous.leo
function main(input) -> u32 {
    if input.registers.a == 0 {
        return 0u32;
    } else {
        return 1u32;
    }
}